--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p>Máte záujem o službu alebo potrebujete poradiť? Ozvite sa mi:</p>
         <ul>
             <li><strong>Meno:</strong> Adrian Maslák</li>
-            <li><strong>Tel:</strong> +421 9XX XXX XXX</li>
+            <li><strong>Tel:</strong> +421 902 327 664</li>
             <li><strong>Email:</strong> info@amsecure.sk</li>
             <li><strong>Pôsobenie:</strong> Bratislava & Orava</li>
         </ul>
