--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
         <h2>Kontakt</h2>
         <p>Máte záujem o službu alebo potrebujete poradiť? Ozvite sa mi:</p>
         <ul>
-            <li><strong>Meno:</strong> Adrian Maslák</li>
-            <li><strong>Tel:</strong> +421 902 327 664</li>
+            <li><strong>Meno:</strong> xxx</li>
+            <li><strong>Tel:</strong> xxx</li>
             <li><strong>Email:</strong> info@amsecure.sk</li>
-            <li><strong>Pôsobenie:</strong> Bratislava & Orava</li>
+            <li><strong>Pôsobenie:</strong> xxx</li>
         </ul>
     </section>
 
