--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domov | AMSECURE</title>
     <meta name="description" content="AMSECURE - Vaša bezpečnosť je naša priorita. Ponúkame komplexné riešenia v oblasti zabezpečenia budov, WiFi sietí, IoT a IT konzultácií.">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/amsecure/css/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo"><img src="/img/logo.png" alt="AMSECURE Logo"></a>
+            <a href="/" class="logo"><img src="/amsecure/img/logo.png" alt="AMSECURE Logo"></a>
             <nav>
     <ul>
         <li><a href="/" class="active">Domov</a></li>
@@ -75,6 +75,6 @@
         </div>
     </footer>
 
-    <script src="/js/main.js" defer></script>
+    <script src="/amsecure/js/main.js" defer></script>
 </body>
 </html>
