--- a/services/consulting/index.html
+++ b/services/consulting/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Konzultácie a infraštruktúra | AMSECURE</title>
     <meta name="description" content="Odborné konzultácie v oblasti IT bezpečnosti, sieťovej infraštruktúry a GDPR. Pomôžeme vám ochrániť vaše dáta a zefektívniť vaše IT.">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/amsecure/css/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo"><img src="/img/logo.png" alt="AMSECURE Logo"></a>
+            <a href="/" class="logo"><img src="/amsecure/img/logo.png" alt="AMSECURE Logo"></a>
             <nav>
     <ul>
         <li><a href="/" >Domov</a></li>
@@ -52,6 +52,6 @@
         </div>
     </footer>
 
-    <script src="/js/main.js" defer></script>
+    <script src="/amsecure/js/main.js" defer></script>
 </body>
 </html>
