deploy: 69b6763183365d52667767cafd14b48af99d81ef

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt | AMSECURE</title>
     <meta name="description" content="Kontaktujte AMSECURE. Sme tu pre vás, aby sme odpovedali na vaše otázky a pripravili vám ponuku na mieru. Vyplňte kontaktný formulár.">
-    <link rel="stylesheet" href="/amsecure/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo"><img src="/amsecure/img/logo.png" alt="AMSECURE Logo"></a>
+            <a href="/" class="logo"><img src="/img/logo.png" alt="AMSECURE Logo"></a>
             <nav>
     <ul>
         <li><a href="/" >Domov</a></li>
@@ -69,6 +69,6 @@
         </div>
     </footer>
 
-    <script src="/amsecure/js/main.js" defer></script>
+    <script src="/js/main.js" defer></script>
 </body>
 </html>
