--- a/services/wifi/index.html
+++ b/services/wifi/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profesionálne WiFi siete | AMSECURE</title>
     <meta name="description" content="Návrh, realizácia a správa profesionálnych WiFi sietí pre firmy aj domácnosti. Zabezpečíme vám stabilné a rýchle pripojenie v každom kúte.">
-    <link rel="stylesheet" href="/amsecure/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo"><img src="/amsecure/img/logo.png" alt="AMSECURE Logo"></a>
+            <a href="/" class="logo"><img src="/img/logo.png" alt="AMSECURE Logo"></a>
             <nav>
     <ul>
         <li><a href="/" >Domov</a></li>
@@ -51,6 +51,6 @@
         </div>
     </footer>
 
-    <script src="/amsecure/js/main.js" defer></script>
+    <script src="/js/main.js" defer></script>
 </body>
 </html>
